Header & Search Form
Create header - navbar - search form

--- a/index.html
+++ b/index.html
@@ -12,6 +12,52 @@
 </head>
 <body>
 
+    <div class="hero">
+        <header class="header">
+            <div class="logo">
+                <img src="img/logo.png" alt="">
+            </div>
+            <nav class="main-nav">
+                <a href="#">Become a Host</a>
+                <a href="#">Help</a>
+                <a href="#">Sign Up</a>
+                <a href="#">Log In</a>
+            </nav>
+        </header>
+
+        <div class="container search-form-container">
+            <div class="search-form">
+                <h1>Book unique homes and experiences.</h1>
+
+                <form action="#">
+                    <div class="field">
+                        <label for="">Where</label>
+                        <input type="text" placeholder="City">
+                    </div>
+                    <div class="date">
+                        <label for="">Check In</label>
+                        <input type="date">
+                    </div>
+                    <div class="date">
+                        <label for="">Check Out</label>
+                        <input type="date">
+                    </div>
+                    <div class="field">
+                        <label>Guest</label>
+                        <select>
+                            <option value="">1</option>
+                            <option value="">2</option>
+                            <option value="">3</option>
+                        </select>
+                    </div>
+                    <div class="submit">
+                        <input type="submit" value="Search" class="submitBtn">
+                    </div>
+                </form>
+            </div>
+        </div>
+
+    </div>
     <script src="js/scripts.js"></script>
 </body>
 </html>
