--- a/index.html
+++ b/index.html
@@ -156,6 +156,82 @@
           <!--card-->
         </div>
       </section>
+
+      <section class="hosting">
+          <h2>Unique homes for your next trip</h2>
+          <div class="cards-container">
+              <div class="card">
+                  <img src="img/lodgement1.jpg" alt="" />
+                  <div class="info">
+                      <p class="category lodgement">Beautiful House on the Beach</p>
+                      <p class="title">Beautiful House 2 bedrooms</p>
+                      <p class="price">&euro; 2500 for night</p>
+                  </div>
+              </div>
+              <!--card-->
+              <div class="card">
+                  <img src="img/lodgement2.jpg" alt="" />
+                  <div class="info">
+                      <p class="category lodgement">1 room in los angeles</p>
+                      <p class="title">1 Room, downtown LA</p>
+                      <p class="price">&euro; 1500 for night</p>
+                  </div>
+              </div>
+              <!--card-->
+              <div class="card">
+                  <img src="img/lodgement3.jpg" alt="" />
+                  <div class="info">
+                      <p class="category lodgement">Cottage in the woods</p>
+                      <p class="title">cottage for 6 persons</p>
+                      <p class="price">&euro; 3200 for night</p>
+                  </div>
+              </div>
+              <!--card-->
+          </div>
+      </section>
+
+    <section class="explore">
+        <h2>Top-rated experiences</h2>
+        <div class="cards-container">
+            <div class="card">
+                <img src="img/newyork1.jpg" alt="" />
+                <div class="info">
+                    <p class="category class">Cooking Class</p>
+                    <p class="title">Japanese Cuisine for Begineers</p>
+                    <p class="price">&euro; 150 for person</p>
+                </div>
+            </div>
+            <!--card-->
+            <div class="card">
+                <img src="img/newyork2.jpg" alt="" />
+                <div class="info">
+                    <p class="category concert">Concert</p>
+                    <p class="title">Festival EDM</p>
+                    <p class="price">&euro; 1200 for person</p>
+                </div>
+            </div>
+            <!--card-->
+            <div class="card">
+                <img src="img/newyork3.jpg" alt="" />
+                <div class="info">
+                    <p class="category class">Cooking Class</p>
+                    <p class="title">Spanish Cuisine</p>
+                    <p class="price">&euro; 200 for person</p>
+                </div>
+            </div>
+            <!--card-->
+            <div class="card">
+                <img src="img/newyork4.jpg" alt="" />
+                <div class="info">
+                    <p class="category outdoor-activity">Horseride</p>
+                    <p class="title">Horse Ride on the Mountain</p>
+                    <p class="price">&euro; 109 for person</p>
+                </div>
+            </div>
+            <!--card-->
+        </div>
+    </section>
+
     </main>
     <script src="js/scripts.js"></script>
   </body>
