--- a/index.html
+++ b/index.html
@@ -158,81 +158,132 @@
       </section>
 
       <section class="hosting">
-          <h2>Unique homes for your next trip</h2>
-          <div class="cards-container">
-              <div class="card">
-                  <img src="img/lodgement1.jpg" alt="" />
-                  <div class="info">
-                      <p class="category lodgement">Beautiful House on the Beach</p>
-                      <p class="title">Beautiful House 2 bedrooms</p>
-                      <p class="price">&euro; 2500 for night</p>
-                  </div>
-              </div>
-              <!--card-->
-              <div class="card">
-                  <img src="img/lodgement2.jpg" alt="" />
-                  <div class="info">
-                      <p class="category lodgement">1 room in los angeles</p>
-                      <p class="title">1 Room, downtown LA</p>
-                      <p class="price">&euro; 1500 for night</p>
-                  </div>
-              </div>
-              <!--card-->
-              <div class="card">
-                  <img src="img/lodgement3.jpg" alt="" />
-                  <div class="info">
-                      <p class="category lodgement">Cottage in the woods</p>
-                      <p class="title">cottage for 6 persons</p>
-                      <p class="price">&euro; 3200 for night</p>
-                  </div>
-              </div>
-              <!--card-->
+        <h2>Unique homes for your next trip</h2>
+        <div class="cards-container">
+          <div class="card">
+            <img src="img/lodgement1.jpg" alt="" />
+            <div class="info">
+              <p class="category lodgement">Beautiful House on the Beach</p>
+              <p class="title">Beautiful House 2 bedrooms</p>
+              <p class="price">&euro; 2500 for night</p>
+            </div>
           </div>
+          <!--card-->
+          <div class="card">
+            <img src="img/lodgement2.jpg" alt="" />
+            <div class="info">
+              <p class="category lodgement">1 room in los angeles</p>
+              <p class="title">1 Room, downtown LA</p>
+              <p class="price">&euro; 1500 for night</p>
+            </div>
+          </div>
+          <!--card-->
+          <div class="card">
+            <img src="img/lodgement3.jpg" alt="" />
+            <div class="info">
+              <p class="category lodgement">Cottage in the woods</p>
+              <p class="title">cottage for 6 persons</p>
+              <p class="price">&euro; 3200 for night</p>
+            </div>
+          </div>
+          <!--card-->
+        </div>
       </section>
 
-    <section class="explore">
+      <section class="explore">
         <h2>Top-rated experiences</h2>
         <div class="cards-container">
-            <div class="card">
-                <img src="img/newyork1.jpg" alt="" />
-                <div class="info">
-                    <p class="category class">Cooking Class</p>
-                    <p class="title">Japanese Cuisine for Begineers</p>
-                    <p class="price">&euro; 150 for person</p>
-                </div>
+          <div class="card">
+            <img src="img/newyork1.jpg" alt="" />
+            <div class="info">
+              <p class="category class">Cooking Class</p>
+              <p class="title">Japanese Cuisine for Begineers</p>
+              <p class="price">&euro; 150 for person</p>
             </div>
-            <!--card-->
-            <div class="card">
-                <img src="img/newyork2.jpg" alt="" />
-                <div class="info">
-                    <p class="category concert">Concert</p>
-                    <p class="title">Festival EDM</p>
-                    <p class="price">&euro; 1200 for person</p>
-                </div>
+          </div>
+          <!--card-->
+          <div class="card">
+            <img src="img/newyork2.jpg" alt="" />
+            <div class="info">
+              <p class="category concert">Concert</p>
+              <p class="title">Festival EDM</p>
+              <p class="price">&euro; 1200 for person</p>
             </div>
-            <!--card-->
-            <div class="card">
-                <img src="img/newyork3.jpg" alt="" />
-                <div class="info">
-                    <p class="category class">Cooking Class</p>
-                    <p class="title">Spanish Cuisine</p>
-                    <p class="price">&euro; 200 for person</p>
-                </div>
+          </div>
+          <!--card-->
+          <div class="card">
+            <img src="img/newyork3.jpg" alt="" />
+            <div class="info">
+              <p class="category class">Cooking Class</p>
+              <p class="title">Spanish Cuisine</p>
+              <p class="price">&euro; 200 for person</p>
             </div>
-            <!--card-->
-            <div class="card">
-                <img src="img/newyork4.jpg" alt="" />
-                <div class="info">
-                    <p class="category outdoor-activity">Horseride</p>
-                    <p class="title">Horse Ride on the Mountain</p>
-                    <p class="price">&euro; 109 for person</p>
-                </div>
+          </div>
+          <!--card-->
+          <div class="card">
+            <img src="img/newyork4.jpg" alt="" />
+            <div class="info">
+              <p class="category outdoor-activity">Horseride</p>
+              <p class="title">Horse Ride on the Mountain</p>
+              <p class="price">&euro; 109 for person</p>
             </div>
-            <!--card-->
+          </div>
+          <!--card-->
         </div>
-    </section>
-
+      </section>
     </main>
+
+    <footer class="footer" id="footer">
+      <div class="container">
+        <div class="nav-footer">
+          <h3>A i r B n b - Clone</h3>
+          <nav class="menu">
+            <a href="#">Carrers</a>
+            <a href="#">Press</a>
+            <a href="#">Policies</a>
+            <a href="#">Help</a>
+          </nav>
+        </div>
+        <!--nav-footer-->
+        <div class="nav-footer">
+          <h3>Discover</h3>
+          <nav class="menu">
+            <a href="#">Trust & Safety</a>
+            <a href="#">Travel Credit</a>
+            <a href="#">Gift Cards</a>
+            <a href="#">Citizen</a>
+            <a href="#">Events <span class="new">New</span></a>
+          </nav>
+        </div>
+        <!--nav-footer-->
+        <div class="nav-footer">
+          <h3>Hosting</h3>
+          <nav class="menu">
+            <a href="#">Why Host</a>
+            <a href="#">Hospitality</a>
+            <a href="#">Responsible Hosting</a>
+            <a href="#">Community Center</a>
+          </nav>
+        </div>
+        <!--nav-footer-->
+        <div class="nav-footer">
+          <div class="nav social-nav">
+            <a href="http://facebook.com"><span>Facebook</span></a>
+            <a href="http.//twitter.com"><span>Twitter</span></a>
+            <a href="http://instagram.com"><span>Instagram</span></a>
+          </div>
+          <nav class="menu">
+            <a href="#">Terms</a>
+            <a href="#">Privacy</a>
+            <a href="#">Site Map</a>
+          </nav>
+        </div>
+        <!--nav-footer-->
+      </div>
+    </footer>
+
+    <a href="#footer" class="footerBtn">Terms, Privacy, Currency & more</a>
+
     <script src="js/scripts.js"></script>
   </body>
 </html>
